--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <a id="opcion_nav5" class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md 1600px:text-lg" href="#galeria">
                         <li class="">Galeria</li>
                     </a>
-                    <a id="opcion_nav4" class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md 1600px:text-lg" href="#">
+                    <a id="opcion_nav4" class="font-bree_regular text-white 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md 1600px:text-lg" href="#contacto">
                         <li class="">Contáctanos</li>
                     </a>
                 </ul>
@@ -97,7 +97,7 @@
                     <a id="galeria_movil" class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#galeria">
                         <li class="">Galeria</li>
                     </a>
-                    <a id="contactanos_movil" class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#">
+                    <a id="contactanos_movil" class="font-bree_bold text-2xl text-black 940px:text-base hover:bg-white hover:text-black duration-500 px-4 py-1 rounded-md" href="#contacto">
                         <li class="">Contáctanos</li>
                     </a>
                 </ul>
@@ -352,6 +352,49 @@
                 </div>
             </div>
         </section>
+
+        <footer id="contacto" class="bg-verde_catolica 320px:text-white 320px:pt-9 320px:pb-2 320px:mt-28">
+            <div class="320px:flex 320px:flex-wrap 320px:gap-5 320px:mx-auto 700px:w-11/12 1360px:w-1300px">
+                <div class="320px:mx-auto 320px:w-72 700px:w-500px 1000px:w-56 1360px:w-72">
+                    <p class="font-bree_bold 320px:text-xl 320px:text-center 700px:text-start">Acércate y vive la experiencia en nuestro club</p>
+                    <iframe class="320px:w-full 320px:h-56 320px:mx-auto 320px:mt-4 700px:h-72 1000px:h-48" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3904.389405838488!2d-77.03397632405355!3d-11.877949938782386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105d0b8c515cd2f%3A0x72d08cfea0969124!2sCat%C3%B3lica%20School!5e0!3m2!1ses-419!2spe!4v1730162410721!5m2!1ses-419!2spe" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="320px:flex 320px:flex-wrap 320px:gap-5 320px:mx-auto 1000px:w-96 1260px:w-850px 1260px:flex-nowrap">
+                    <div class="320px:w-72 320px:mx-auto 320px:text-center">
+                        <span class="320px:font-bree_bold 320px:text-lg">Dirección</span>
+                        <p class="font-bree_regular 1260px:mt-7">Calle W Mz. Q2, 7mo. Etapa, Urb. Sto. Domingo - Carabayllo</p>
+                    </div>
+                    <div class="320px:w-72 320px:mx-auto 320px:text-center">
+                        <span class="320px:font-bree_bold 320px:text-lg">Informes</span>
+                        <p class="font-bree_regular 1260px:mt-7">+51 999 999 999</p>
+                        <p class="font-bree_regular 1260px:mt-3">+51 999 999 999</p>
+                    </div>
+                    <div class="320px:w-72 320px:mx-auto 320px:text-center">
+                        <span class="320px:font-bree_bold 320px:text-lg">Correo</span>
+                        <p class="font-bree_regular 1260px:mt-7">informes@clubcatolica.edu.pe</p>
+                        <ul class="font-bree_regular 320px:flex 320px:flex-col 320px:items-center 320px:gap-3 320px:mt-7 1260px:mt-3">
+                            <li><a class="320px:flex 320px:gap-1" href="#">
+                                <img class="320px:w-5" src="icons/whatsapp.png" alt="">
+                                <span>Whatsapp</span>
+                            </a></li>
+                            <li><a class="320px:flex 320px:gap-1" href="#">
+                                <img class="320px:w-5" src="icons/facebook.png" alt="">
+                                <span>Facebook</span>
+                            </a></li>
+                            <li><a class="320px:flex 320px:gap-1" href="#">
+                                <img class="320px:w-5" src="icons/instagram.png" alt="">
+                                <span>Instagram</span>
+                            </a></li>
+                            <li><a class="320px:flex 320px:gap-1" href="#">
+                                <img class="320px:w-5" src="icons/facebook.png" alt="">
+                                <span>Youtube</span>
+                            </a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <p class="font-bree_regular 320px:mt-10 320px:text-center 320px:text-sm">&copy2024 Club La Católica - Todos los derechos reservados</p>
+        </footer>
 
         <div id="nat_modal" class="hidden top-0 left-0 w-full h-full bg-black opacity-95 z-30 overflow-y-auto flex-wrap justify-center gap-2 py-8 pt-16"> <!-- fixed- flex -->
             <img id="close_gal_nat" class="absolute top-5 right-5 w-9 z-50 cursor-pointer" src="/icons/equis_blanco.png" alt="">
