diseñando la pagina de costos

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
             <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-azul_catolica"><img class="1260px:w-6 540px:w-5" src="/icons/facebook.png" alt="Icono de Facebook"></li></a>
             <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-green-500"><img class="1260px:w-6 540px:w-5" src="/icons/whatsapp.png" alt="Icono de Whatsapp"></li></a>
             <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-pink-600"><img class="1260px:w-6 540px:w-5" src="/icons/instagram.png" alt="Icono de Instagram"></li></a>
+            <a href="#"><li class="p-1 rounded-md flex items-center justify-center duration-500 hover:cursor-pointer hover:bg-black"><img class="1260px:w-6 540px:w-5" src="/icons/tik-tok-blanco.png" alt="Icono de Instagram"></li></a>
         </ul>
     </header>
 
@@ -386,8 +387,8 @@
                                 <span>Instagram</span>
                             </a></li>
                             <li><a class="320px:flex 320px:gap-1" href="#">
-                                <img class="320px:w-5" src="icons/facebook.png" alt="">
-                                <span>Youtube</span>
+                                <img class="320px:w-5" src="icons/tik-tok-blanco.png" alt="">
+                                <span>Tik Tok</span>
                             </a></li>
                         </ul>
                     </div>
