--- a/pages/natacion.html
+++ b/pages/natacion.html
@@ -95,9 +95,9 @@
         </ul>
     </header>
 
-    <main>
-        <section class="320px:flex 320px:flex-wrap 320px:gap-4 320px:mt-4">
-            <div id="aquabebe" class="320px:w-11/12 440px:w-400px 320px:mx-auto 320px:inline-block">
+    <main class="1000px:w-940px 1260px:w-1200px 1000px:mx-auto 1000px:flex 320px:mt-4">
+        <section class="320px:flex 320px:flex-col 320px:w-11/12 1000px:w-auto 440px:w-400px 540px:w-500px 1000px:justify-start 320px:gap-4 1260px:basis-2/4">
+            <div id="aquabebe" class="320px:w-full 640px:w-600px 320px:mx-auto 320px:inline-block">
                 <div class="bg-azul_catolica text-white 320px:text-center 320px:font-bree_regular leading-4 320px:py-2">
                     <h2 class="320px:inline-block">Aquabebé</h2><br>
                     <span class="320px:text-xs">(8 meses a 3 años)</span>
@@ -120,7 +120,7 @@
                     </div>
                 </div>
             </div>
-            <div id="menores_uno" class="320px:w-11/12 440px:w-400px 320px:mx-auto 320px:inline-block">
+            <div id="menores_uno" class="320px:w-full 640px:w-600px 320px:mx-auto 320px:inline-block">
                 <div class="bg-azul_catolica text-white 320px:text-center 320px:font-bree_regular leading-4 320px:py-2">
                     <h2 class="320px:inline-block">Menores 1</h2><br>
                     <span class="320px:text-xs">(4 a 6 años)</span>
@@ -184,7 +184,7 @@
                     </section>
                 </div>
             </div>
-            <div id="menores_dos" class="320px:w-11/12 440px:w-400px 320px:mx-auto 320px:inline-block">
+            <div id="menores_dos" class="320px:w-full 640px:w-600px 320px:mx-auto 320px:inline-block">
                 <div class="bg-azul_catolica text-white 320px:text-center 320px:font-bree_regular leading-4 320px:py-2">
                     <h2 class="320px:inline-block">Menores 2</h2><br>
                     <span class="320px:text-xs">(7 a 14 años)</span>
@@ -280,7 +280,7 @@
                     </section>
                 </div>
             </div>
-            <div id="adultos" class="320px:w-11/12 440px:w-400px 320px:mx-auto 320px:inline-block">
+            <div id="adultos" class="320px:w-full 640px:w-600px 320px:mx-auto 320px:inline-block">
                 <div class="bg-azul_catolica text-white 320px:text-center 320px:font-bree_regular leading-4 320px:py-2">
                     <h2 class="320px:inline-block">Jóvenes y Adultos</h2><br>
                     <span class="320px:text-xs">(15 años en adelante)</span>
@@ -421,9 +421,19 @@
                 </div>
             </div>
         </section>
+        <section class="320px:hidden 1000px:inline-block 1260px:basis-2/4 1260px:flex">
+            <div class="1000px:w-4/5 1260px:w-5/12 1000px:mx-auto 1000px:flex 1000px:flex-col 1000px:gap-2 1260px:">
+                <img class="1000px:w-full 1000px:object-cover 1000px:rounded-lg" src="/images/bebes.jpg" alt="Bebe nadando en la piscina">
+                <img class="1000px:w-full 1000px:object-cover 1000px:rounded-lg" src="/images/menores_1.jpg" alt="Niños menores nadando en la piscina">
+            </div>
+            <div class="1000px:w-4/5 1260px:w-5/12 1000px:mx-auto 1000px:flex 1000px:flex-col 1000px:gap-2">
+                <img class="1000px:w-full 1000px:object-cover 1000px:rounded-lg" src="/images/menores_2.jpg" alt="Niños mayores nadando en la piscina">
+                <img class="1000px:w-full 1000px:object-cover 1000px:rounded-lg" src="/images/adultos.jpg" alt="Adultos nadando en la piscina">
+            </div>
+        </section>
     </main>
 
-    <footer id="contacto" class="bg-verde_catolica 320px:text-white 320px:pt-9 320px:pb-2 320px:mt-28">
+    <footer id="contacto" class="bg-verde_catolica 320px:text-white 320px:pt-9 320px:pb-2 320px:mt-14">
         <div class="320px:flex 320px:flex-wrap 320px:gap-5 320px:mx-auto 700px:w-11/12 1360px:w-1300px">
             <div class="320px:mx-auto 320px:w-72 700px:w-500px 1000px:w-56 1360px:w-72">
                 <p class="font-bree_bold 320px:text-xl 320px:text-center 700px:text-start">Acércate y vive la experiencia en nuestro club</p>
@@ -444,20 +454,20 @@
                     <p class="font-bree_regular 1260px:mt-7">informes@clubcatolica.edu.pe</p>
                     <ul class="font-bree_regular 320px:flex 320px:flex-col 320px:items-center 320px:gap-3 320px:mt-7 1260px:mt-3">
                         <li><a class="320px:flex 320px:gap-1" href="#">
-                            <img class="320px:w-5" src="icons/whatsapp.png" alt="">
+                            <img class="320px:w-5" src="/icons/whatsapp.png" alt="">
                             <span>Whatsapp</span>
                         </a></li>
                         <li><a class="320px:flex 320px:gap-1" href="#">
-                            <img class="320px:w-5" src="icons/facebook.png" alt="">
+                            <img class="320px:w-5" src="/icons/facebook.png" alt="">
                             <span>Facebook</span>
                         </a></li>
                         <li><a class="320px:flex 320px:gap-1" href="#">
-                            <img class="320px:w-5" src="icons/instagram.png" alt="">
+                            <img class="320px:w-5" src="/icons/instagram.png" alt="">
                             <span>Instagram</span>
                         </a></li>
                         <li><a class="320px:flex 320px:gap-1" href="#">
-                            <img class="320px:w-5" src="icons/facebook.png" alt="">
-                            <span>Youtube</span>
+                            <img class="320px:w-5" src="/icons/tik-tok-blanco.png" alt="">
+                            <span>Tik Tok</span>
                         </a></li>
                     </ul>
                 </div>
