--- a/pages/natacion.html
+++ b/pages/natacion.html
@@ -96,13 +96,13 @@
     </header>
 
     <main class="1000px:w-940px 1260px:w-1200px 1000px:mx-auto 1000px:flex 320px:mt-4">
-        <section class="320px:flex 320px:flex-col 320px:w-11/12 1000px:w-auto 440px:w-400px 540px:w-500px 1000px:justify-start 320px:gap-4 1260px:basis-2/4">
-            <div id="aquabebe" class="320px:w-full 640px:w-600px 320px:mx-auto 320px:inline-block">
-                <div class="bg-azul_catolica text-white 320px:text-center 320px:font-bree_regular leading-4 320px:py-2">
+        <section class="320px:flex 320px:flex-col 320px:mx-auto 320px:w-11/12 1000px:w-auto 440px:w-400px 540px:w-500px 1000px:justify-start 320px:gap-4 1260px:basis-2/4">
+            <div id="aquabebe" class="320px:w-full 1000px:w-600px 320px:mx-auto 320px:inline-block">
+                <div class="bg-azul_catolica text-white 320px:text-center 320px:font-bree_regular leading-4 320px:py-2 320px:rounded-t-lg 1000px:rounded-t-xl">
                     <h2 class="320px:inline-block">Aquabebé</h2><br>
                     <span class="320px:text-xs">(8 meses a 3 años)</span>
                 </div>
-                <div class="320px:flex 320px:flex-col 320px:font-bree_regular 320px:border 320px:border-azul_catolica 320px:text-sm 320px:gap-2">
+                <div class="320px:flex 320px:flex-col 320px:font-bree_regular 320px:border 320px:border-azul_catolica 320px:text-sm 320px:gap-2 320px:rounded-b-lg 1000px:rounded-b-xl">
                     <div class="320px:flex 320px:justify-between 320px:bg-amarillo_catolica 320px:px-3 320px:py-1">
                         <span>Turno</span>
                         <span>Horario</span>
@@ -120,12 +120,12 @@
                     </div>
                 </div>
             </div>
-            <div id="menores_uno" class="320px:w-full 640px:w-600px 320px:mx-auto 320px:inline-block">
-                <div class="bg-azul_catolica text-white 320px:text-center 320px:font-bree_regular leading-4 320px:py-2">
+            <div id="menores_uno" class="320px:w-full 1000px:w-600px 320px:mx-auto 320px:inline-block">
+                <div class="bg-azul_catolica text-white 320px:text-center 320px:font-bree_regular leading-4 320px:py-2 320px:rounded-t-lg 1000px:rounded-t-xl">
                     <h2 class="320px:inline-block">Menores 1</h2><br>
                     <span class="320px:text-xs">(4 a 6 años)</span>
                 </div>
-                <div class="320px:flex 320px:flex-col 320px:font-bree_regular 320px:border 320px:border-azul_catolica 320px:text-sm 320px:gap-2">
+                <div class="320px:flex 320px:flex-col 320px:font-bree_regular 320px:border 320px:border-azul_catolica 320px:text-sm 320px:gap-2 320px:rounded-b-lg 1000px:rounded-b-xl">
                     <section>
                         <div class="320px:flex 320px:justify-between 320px:bg-amarillo_catolica 320px:px-3 320px:py-1">
                             <span>Turno Mañana</span>
@@ -184,12 +184,12 @@
                     </section>
                 </div>
             </div>
-            <div id="menores_dos" class="320px:w-full 640px:w-600px 320px:mx-auto 320px:inline-block">
-                <div class="bg-azul_catolica text-white 320px:text-center 320px:font-bree_regular leading-4 320px:py-2">
+            <div id="menores_dos" class="320px:w-full 1000px:w-600px 320px:mx-auto 320px:inline-block">
+                <div class="bg-azul_catolica text-white 320px:text-center 320px:font-bree_regular leading-4 320px:py-2 320px:rounded-t-lg 1000px:rounded-t-xl">
                     <h2 class="320px:inline-block">Menores 2</h2><br>
                     <span class="320px:text-xs">(7 a 14 años)</span>
                 </div>
-                <div class="320px:flex 320px:flex-col 320px:font-bree_regular 320px:border 320px:border-azul_catolica 320px:text-sm 320px:gap-2">
+                <div class="320px:flex 320px:flex-col 320px:font-bree_regular 320px:border 320px:border-azul_catolica 320px:text-sm 320px:gap-2 320px:rounded-b-lg 1000px:rounded-b-xl">
                     <section>
                         <div class="320px:flex 320px:justify-between 320px:bg-amarillo_catolica 320px:px-3 320px:py-1">
                             <span>Turno Mañana</span>
@@ -280,12 +280,12 @@
                     </section>
                 </div>
             </div>
-            <div id="adultos" class="320px:w-full 640px:w-600px 320px:mx-auto 320px:inline-block">
-                <div class="bg-azul_catolica text-white 320px:text-center 320px:font-bree_regular leading-4 320px:py-2">
+            <div id="adultos" class="320px:w-full 1000px:w-600px 320px:mx-auto 320px:inline-block">
+                <div class="bg-azul_catolica text-white 320px:text-center 320px:font-bree_regular leading-4 320px:py-2 320px:rounded-t-lg 1000px:rounded-t-xl">
                     <h2 class="320px:inline-block">Jóvenes y Adultos</h2><br>
                     <span class="320px:text-xs">(15 años en adelante)</span>
                 </div>
-                <div class="320px:flex 320px:flex-col 320px:font-bree_regular 320px:border 320px:border-azul_catolica 320px:text-sm 320px:gap-2">
+                <div class="320px:flex 320px:flex-col 320px:font-bree_regular 320px:border 320px:border-azul_catolica 320px:text-sm 320px:gap-2 320px:rounded-b-lg 1000px:rounded-b-xl">
                     <section>
                         <div class="320px:flex 320px:justify-between 320px:bg-amarillo_catolica 320px:px-3 320px:py-1">
                             <span>Turno Mañana</span>
@@ -421,14 +421,34 @@
                 </div>
             </div>
         </section>
-        <section class="320px:hidden 1000px:inline-block 1260px:basis-2/4 1260px:flex">
-            <div class="1000px:w-4/5 1260px:w-5/12 1000px:mx-auto 1000px:flex 1000px:flex-col 1000px:gap-2 1260px:">
-                <img class="1000px:w-full 1000px:object-cover 1000px:rounded-lg" src="/images/bebes.jpg" alt="Bebe nadando en la piscina">
-                <img class="1000px:w-full 1000px:object-cover 1000px:rounded-lg" src="/images/menores_1.jpg" alt="Niños menores nadando en la piscina">
-            </div>
-            <div class="1000px:w-4/5 1260px:w-5/12 1000px:mx-auto 1000px:flex 1000px:flex-col 1000px:gap-2">
-                <img class="1000px:w-full 1000px:object-cover 1000px:rounded-lg" src="/images/menores_2.jpg" alt="Niños mayores nadando en la piscina">
-                <img class="1000px:w-full 1000px:object-cover 1000px:rounded-lg" src="/images/adultos.jpg" alt="Adultos nadando en la piscina">
+        <section class="320px:hidden 1000px:inline-block">
+            <div class="1000px:w-11/12 1000px:bg-gradient-to-r 1000px:from-hover_verde_catolica 1000px:to-gradient_verde_catolica 1000px:mx-auto 1000px:text-white 1000px:pt-9 1000px:pb-12 1000px:px-5 1000px:flex 1000px:flex-col 1000px:gap-10 1000px:rounded-40px 1260px:pt-14 1260px:pb-36">
+                <div>
+                    <h4 class="1000px:font-helvetic 1000px:text-4xl"><span class="1000px:font-bree_regular 1000px:text-lg">Conoce los </span><br>Beneficios</h4>
+                    <div class="1000px:h-1 1000px:w-16 1000px:bg-amarillo_catolica"></div>
+                </div>
+                <ul class="1000px:flex 1000px:flex-col 1000px:gap-4">
+                    <li class="1000px:flex 1000px:items-center 1000px:gap-3">
+                        <img src="/images/cheque.png" alt="">
+                        <i class="1000px:font-bree_regular">Consolida el vínculo de afecto con los padres y familiares.</i>
+                    </li>
+                    <li class="1000px:flex 1000px:items-center 1000px:gap-3">
+                        <img src="/images/cheque.png" alt="">
+                        <i class="1000px:font-bree_regular">Mejora el sistema Psicomotriz.</i>
+                    </li>
+                    <li class="1000px:flex 1000px:items-center 1000px:gap-3">
+                        <img src="/images/cheque.png" alt="">
+                        <i class="1000px:font-bree_regular">Ayuda al bebé a sentirse seguro de sí­ mismo.</i>
+                    </li>
+                    <li class="1000px:flex 1000px:items-center 1000px:gap-3">
+                        <img src="/images/cheque.png" alt="">
+                        <i class="1000px:font-bree_regular">Mejora el sistema cardiorespiratorio</i>
+                    </li>
+                    <li class="1000px:flex 1000px:items-center 1000px:gap-3">
+                        <img src="/images/cheque.png" alt="">
+                        <i class="1000px:font-bree_regular">El coeficiente intelectual se ve aumentado</i>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
